--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,6 +2,7 @@
 :root {
   --primary: #393fef;
   --secondary: #f5cf46;
+  --text: #3c3c3c;
 }
 
 @font-face {
@@ -40,6 +41,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'GT-America', serif;
+  color: var(--primary);
 }
 
 .title {
@@ -51,6 +53,7 @@ body {
 
 .header {
   align-items: center;
+  border-top: 10px solid var(--primary);
   color: var(--primary);
   display: flex;
   min-height: 12rem;
@@ -84,6 +87,18 @@ body {
 .icon {
   height: 100%;
   width: 100%;
+}
+
+.body-icon__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: var(--primary);
+  border: 1px dashed var(--primary);
+  border-radius: 50%;
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 5px;
 }
 
 .body {
@@ -178,4 +193,34 @@ a, a:visited, a:hover, a:active {
   margin: 20px;
   display:inline-block;
   fill: var(--secondary);
+}
+
+.grappler {
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+  border-bottom: 2px solid var(--primary);
+  padding: 1.5rem 0;
+  text-decoration: none;
+}
+
+.grappler:hover {
+  background: var(--primary);
+  color: white;
+  border-bottom: 2px solid white;
+}
+
+.grappler:hover .body-icon__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: white;
+  border: 1px dashed white;
+}
+
+.grappler--create {
+  display: inline-block;
+  padding:  .5rem 1rem;
 }
