--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,8 +1,8 @@
 
 :root {
-  --primary: #393fef;
-  --secondary: #f5cf46;
-  --text: #3c3c3c;
+  --primary:#CBA104;
+  --dark: #4F4F4F;
+  --light: #E0E0E0;
 }
 
 @font-face {
@@ -37,98 +37,69 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: 'GT-America-Expanded';
+  src: url("./fonts/GT-America-Expanded-Black.woff2") format('woff2');
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: 'GT-America-Expanded';
+  src: url("./fonts/GT-America-Expanded-Black-Italic.woff2") format('woff2');
+  font-weight: 900;
+  font-style: italic;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'GT-America', serif;
-  color: var(--primary);
+  font-weight: 300;
+  color: var(--dark);
+  background: var(--light);
 }
 
 .title {
-  border-bottom: 4px transparent solid;
-  font-family: 'GT-America', serif;
-  font-weight: 700;
+  background: var(--primary);
+  font-family: 'GT-America-Expanded', serif;
+  font-weight: 900;
   font-size: 5rem;
-}
-
-.header {
-  align-items: center;
-  border-top: 10px solid var(--primary);
-  color: var(--primary);
-  display: flex;
-  min-height: 12rem;
-  justify-content: space-between;
-  padding: 0 4rem 0 2rem;
+  margin: 5rem 0;
+  padding: 3rem 6rem 0 1rem;
 }
 
 .title:hover {
-  background: white;
-  border-bottom: 4px dashed var(--primary);
-  fill: var(--primary);
+  color: var(--light);
   cursor: pointer;
 }
 
-.icon__wrapper {
-  background: var(--primary);
-  border-radius: 50%;
-  height: 3rem;
-  fill: white;
-  padding: 10px;
-  width: 3rem;
+.section-title {
+  font-weight: 900;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
-.icon__wrapper:hover {
-  background: white;
-  border: 4px dashed var(--primary);
-  fill: var(--primary);
-  cursor: pointer;
-}
+.acronym { letter-spacing: .15em; }
 
-.icon {
-  height: 100%;
-  width: 100%;
-}
-
-.body-icon__wrapper {
-  display: flex;
-  justify-content: center;
+.header {
   align-items: center;
-  fill: var(--primary);
-  border: 1px dashed var(--primary);
-  border-radius: 50%;
-  height: 1.5rem;
-  width: 1.5rem;
-  padding: 5px;
+  border-top: 15px solid var(--dark);
+  display: flex;
+  min-height: 12rem;
+  justify-content: space-between;
+  padding: 0 5rem;
 }
 
 .body {
-  margin: 0 auto;
+  margin-left: 5rem;
   max-width: 1000px;
 }
 
 .profile {
   display: flex;
-  justify-content: flex-end;
+  margin-top: 3rem;
 }
 
-.avatar {
-  border-radius: 50%;
-  margin-right: 5rem;
-  max-height: 120px;
-  max-width: 120px;
-}
-
-.avatar img {
-  border-radius: 50%;
-  mix-blend-mode: multiply;
-  filter: grayscale(100%);
-  width: 100%;
-}
-
-.sub-head {
-  font-size: 4rem;
-  font-weight: 300;
-}
 
 .clip__container {
   max-width: 450px;
@@ -138,54 +109,14 @@ body {
   width: 100%;
 }
 
-a, a:visited, a:hover, a:active {
+a, a:visited, a:active {
   color: inherit;
-}
-
-.upload-form {
-  max-width: 40rem;
-  margin: 0 auto;
+  text-decoration: none;
 }
 
 .fieldset {
   margin-bottom: 2rem;
-  display: flex;
-  flex-flow: column;
 }
-
-.label {
-  font-size: 1.2rem;
-  margin-bottom: .5rem;
-}
-
-.btn {
-  background: transparent;
-  border: 3px solid var(--primary);
-  color: var(--primary);
-  cursor: pointer;
-  font-weight: 700;
-  padding: .75rem 1.25rem;
-}
-
-.btn:hover { border: 3px dashed var(--primary); }
-
-.btn--primary {
-  background: var(--primary);
-  color: #fff;
-}
-
-.btn--primary:hover {
-  border: 3px dashed var(--primary);
-  color: var(--primary);
-  background: transparent;
-}
-
-.btn-container {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.btn-container .btn:last-child { margin-left: 1rem; }
 
 .loader {
   width: 100px;
@@ -195,32 +126,87 @@ a, a:visited, a:hover, a:active {
   fill: var(--secondary);
 }
 
-.grappler {
-  align-items: center;
+.big-list {
   display: flex;
-  cursor: pointer;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
-  border-bottom: 2px solid var(--primary);
-  padding: 1.5rem 0;
-  text-decoration: none;
+  flex-flow: column;
 }
 
-.grappler:hover {
-  background: var(--primary);
-  color: white;
-  border-bottom: 2px solid white;
-}
-
-.grappler:hover .body-icon__wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  fill: white;
-  border: 1px dashed white;
-}
-
-.grappler--create {
+.big-link {
   display: inline-block;
-  padding:  .5rem 1rem;
+  font-weight: 300;
+  font-size: 5rem;
+  margin-bottom: 3rem;
+}
+
+.big-link:hover {
+  background: var(--dark);
+  color: var(--light);
+}
+
+.divider {
+  background: var(--dark);
+  height: 15px;
+  width: 200px;
+  margin: 0 5rem 4rem;
+}
+
+.upload-form {
+  margin-left: 5rem;
+  padding-bottom: 5rem;
+  width: 400px;
+}
+
+.btn {
+  background: var(--dark);
+  border: 2px solid var(--dark);
+  font-weight: 700;
+  color: var(--light);
+  padding: 1rem 2rem;
+  border: 0;
+  margin-right: 1rem;
+}
+
+.btn--secondary {
+  background: transparent;
+  border: 2px solid var(--dark);
+  color: var(--dark);
+}
+
+.Select-control {
+  box-shadow: none !important;
+  background-color: transparent !important;
+  border-radius: 0 !important;
+  border: 0 !important;
+  border-bottom: 2px solid var(--dark) !important;
+  color: var(--dark) !important;
+}
+
+.Select-value {
+  padding-left: 0 !important;
+}
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.label {
+  display: inline-block;
+}
+
+.label--file {
+    color: var(--dark);
+    border: 2px solid var(--dark);
+    display: inline-block;
+    cursor: pointer;
+    padding: 2rem 1rem;
+}
+
+.label--file:hover {
+    color: var(--primary);
+    background: var(--dark);
 }
