--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -90,6 +90,10 @@ body {
   padding: 0 5rem;
 }
 
+.sub-head {
+  font-size: 2rem;
+}
+
 .body {
   margin-left: 5rem;
   padding-bottom: 5rem;
@@ -99,6 +103,7 @@ body {
 .profile {
   display: flex;
   margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .clip-list {
@@ -107,13 +112,18 @@ body {
 }
 
 .clip-list__container {
+  align-self: flex-start;
   background: white;
   box-sizing: border-box;
   max-width: 450px;
-  margin: .5rem;
+  margin: .5rem 1rem .5rem 0;
   min-width: 100px;
-  flex: 1 1 calc(33% - 1rem)%;
+  flex: 0 1 calc(33% - 1rem)%;
   padding: .5rem .5rem 1rem;
+}
+
+.clip__thumbnail {
+  width: 100%;
 }
 
 .clip__video {
@@ -170,8 +180,9 @@ a, a:visited, a:active {
 .btn {
   background: var(--dark);
   border: 2px solid var(--dark);
-  font-weight: 700;
   color: var(--light);
+  cursor: pointer;
+  font-weight: 700;
   padding: 1rem 2rem;
   border: 0;
   margin-right: 1rem;
