clean up filtering

--- a/front-end/src/components/ClipContainer/clip-container.css
+++ b/front-end/src/components/ClipContainer/clip-container.css
@@ -42,3 +42,13 @@
   font-size: 2rem;
   padding: 0 1rem 1rem;
 }
+
+.clip {
+  position: relative;
+}
+
+.clip__overlay {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
