--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -129,6 +129,13 @@ body {
   width: 100%;
 }
 
+.clip__video--loader {
+  min-height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 a, a:visited, a:active {
   color: inherit;
   text-decoration: none;
@@ -161,6 +168,17 @@ a, a:visited, a:active {
 .big-link:last-child { margin-bottom: 0; }
 
 .big-link:hover {
+  background: var(--dark);
+  color: var(--light);
+}
+
+.big {
+  font-size: 3rem;
+  font-weight: 300;
+  padding: .5rem 1rem;
+}
+
+.inverted {
   background: var(--dark);
   color: var(--light);
 }
