--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -117,7 +117,7 @@ body {
   max-width: 450px;
   margin: .5rem 1rem .5rem 0;
   min-width: 100px;
-  flex: 0 1 calc(33% - 1rem)%;
+  flex: 0 1 calc(33% - 1rem);
   padding: .5rem .5rem 1rem;
 }
 
@@ -198,7 +198,7 @@ a, a:visited, a:active {
 
 .btn {
   background: var(--dark);
-  border: 2px solid var(--dark);
+  border: 2px solid var(--dark) !important;
   color: var(--light);
   cursor: pointer;
   font-weight: 700;
