add clip stats to serializer

--- a/front-end/src/components/Filter/filter.css
+++ b/front-end/src/components/Filter/filter.css
@@ -6,6 +6,11 @@
   align-items: center
 }
 
+.filter__label svg {
+  fill: var(--dark);
+  margin-left: auto;
+}
+
 .filter__category {
   margin-bottom: 2rem;
 }
